styles/main.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

$backgroundColor: #181818;
$white: #f1f1f1;
$tablet: 550px;
$desktop: 750px;
$fadeInDelay: 3s;
$fadeInSpeed: 0.3s;

html,
body {
  width: 100%;
  height: 100%;
}

body {
  font-size: 11px;
  font-style: normal;
  line-height: 1.5;
  background-color: $backgroundColor;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'apercu_proregular';
  cursor: default;
  @media (min-width: $tablet) {
    font-size: 17px;
  }
  @media (min-width: $desktop) {
    font-size: 19px;
  }
}

::-moz-selection {
  background: transparent;
  text-shadow: none;
}

::selection {
  background: transparent;
  text-shadow: none;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  &.inline {
    li {
      display: inline-block;
      margin-right: 0.5em;
      &:last-child {
        margin-right: 0;
      }
    }
  }
}

a {
  text-decoration: none;
  cursor: pointer;
  &:focus {
    outline: 0;
  }
}

h1,
h2 {
  font-weight: normal;
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
}

.inner {
  margin: 0 auto;
  width: 80%;
  @media (min-width: $tablet) {
    max-width: 600px;
  }
}

.table {
  width: 100%;
  height: 100%;
  display: table;
}

.table-cell {
  width: 100%;
  height: 100%;
  display: table-cell;
  vertical-align: middle;
}

$max: 10;
$speed: 3.0s;

$colorCount: $max;

@while $colorCount >= 0 {
  $currentColor: hsl( ($colorCount * (350 / $max)), 60%, 75%);
  .color#{$colorCount} {
    .logo:hover,
    .social-link:hover,
    .typer,
    .available a:hover {
      color: $currentColor;
    }

    .highlight,
    .footer {
      background-color: $currentColor;
    }
  }
  $colorCount: $colorCount - 1;
}

.typer {
  margin: 1em auto;
  position: relative;
  color: transparent;
  transition: color $speed linear;
  min-height: 70px;
  @media (min-width: $tablet) {
    min-height: 90px;
  }
  @media (min-width: $desktop) {
    min-height: 146px;
  }
  &:after {
    content: '🤙';
    display: none;
    position: absolute;
    top: 0;
    left: -1em;
  }
  &:hover {
    &:after {
      display: block;
    }
  }
}

.highlight,
.footer {
  transition: background-color $speed linear;
}

.highlight {
  color: transparent;
  border-radius: 1px;
}

.hidden {
  display: none;
}

.logo,
.social-link {
  transition: color 0.3s linear;
}

.social-link {
  color: #6d6d6d;
  &:link,
  &:active,
  &:visited {
    color: #6d6d6d;
  }
}

.logo,
.social {
  animation-duration: $fadeInSpeed;
  animation-delay: $fadeInDelay;
  animation-fill-mode: both;
}

.logo {
  display: inline-block; // Needs this for intro animation to work
  animation-name: fadeBounceDown;
  color: $white;
}
.social {
  animation-name: fadeBounceUp;
}

.about {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  transition: background-color $speed linear
}

.browser-height {
  height: 100%;
  pointer-events: none;
}

.typer,
.project-link {
  font-family: 'circular_stdregular';
  font-size: 2em;
  font-weight: 600;
  line-height: 1.35;
  letter-spacing: -0.035em;
  @media (min-width: $desktop) {
    font-size: 2.842em;
  }
}

.footer {
  background-color: #1e1e1e;
  position: relative;
  z-index: 1;
  animation-name: navPeak;
  animation-duration: $fadeInSpeed;
  animation-delay: $fadeInDelay;
  animation-fill-mode: both;
}

.projects {
  padding: 3em 0;
}

.project-link {
  display: block;
  padding: 0.25em 0;
  color: rgba($backgroundColor, 0.6);
  &:hover {
    color: transparent;
    .project-highlight {
      background-color: rgba($backgroundColor, 0.6);
    }
  }
}

.project-highlight {
  pointer-events: none;
  border-radius: 1px;
}

.worked-with {
  font-family: 'circular_stdregular';
  color: rgba($backgroundColor, 0.6);
  padding-bottom: 3em;
  a {
    color: rgba($backgroundColor, 0.6);
    border-bottom: 1px solid transparent;
    &:hover {
      border-bottom: 1px solid;
    }
  }
}
.worked-with--label {
  font-family: 'apercu_proregular';
  // text-transform: uppercase;
  font-size: 0.8em;
  font-weight: 600;
  // letter-spacing: 0.15em;
  padding-bottom: 0.5em;
}

.available {
  font-family: 'circular_stdregular';
  position: relative;
  font-size: 1.25em;
  line-height: 1.2;
  color: #f1f1f1;
  letter-spacing: -0.015em;
  margin-bottom: 3em;
  a {
    color: #6d6d6d;
    position: relative;
    transition: color 0.3s linear;
    &:before {
      position: absolute;
      content: '👋';
      display: inline-block;
      top: 0.1em;
      left: -1.5em;
      opacity: 0;
      transform-origin: 50% 90%;
      animation-name: wave;
      animation-duration: 0.35s;
      animation-timing-function: linear;
      animation-iteration-count: infinite;
      // animation-fill-mode: both;
    }
    &:hover {
      &:before {
        opacity: 1;
      }
    }
  }
  .emoji {
    position: absolute;
    left: -1.5em;
  }
}
/* ... */

